traefik/traefik-dashboard.ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: tc-traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`traefik.apps.home.sundland.net`) && ( PathPrefix(`/dashboard`) || PathPrefix(`/api`) )
      services:
        - kind: TraefikService
          name: api@internal
  tls: { }
---
